# IDS_Interpretability

./: .gitignore  README.md  colab_pipeline.ipynb  kaggle_pipeline.ipynb  methun-research.ipynb  pyproject.toml  requirements.txt  vm_setup.sh
artifacts/shap/: shap_global_importance_attack.csv
scripts/: create_sample.py  run_full_pipeline.py  run_pipeline.py  run_shap.py  train_cnn_transformer.py  train_cpu.py  train_enhanced.py  validate_pipeline.py
src/methun_research/: __init__.py  config.py  data.py
src/methun_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/methun_research/interpretability/: __init__.py  grad_cam.py  integrated_gradients.py  shap_runner.py
src/methun_research/models/: __init__.py  cnn_transformer.py  transformer.py
src/methun_research/training/: __init__.py  cnn_trainer.py  enhanced_trainer.py
src/methun_research/utils/: __init__.py  device.py
